--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,19 @@ body{
 .info{
 	text-align: center;
 }
+.significant{
+	border-bottom: 1px solid rgb(0, 174, 255);
+}
+img{
+	border: 2px solid rgb(0, 174, 255);
+	padding: 10px;
+}
+table{
+	background-color: rgb(172, 216, 218);
+}
+th{
+	background-color: rgb(5, 143, 143);
+}
 a{
 	color: #00f;
 	text-decoration: underline;
