--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -9,6 +9,10 @@
 		display: block;
 		margin: 0 auto 50px auto;
 	}
+	header img:hover{
+		transform: none;
+		filter: none;
+	}
 	.Fullname{
 		margin: 58px auto 36px auto;
 	}
