--- a/css/hire-me.css
+++ b/css/hire-me.css
@@ -4,7 +4,17 @@
 	height: 644px;
 	top:50%;
 	left:50%;
-	transform:translate(-50%, -50%);
+	animation: decrease 1.5s forwards linear;
+}
+@keyframes decrease{
+	0%{
+		transform:translate(-50%, -50%) scale(2);
+		opacity: 0;
+	}
+	100%{
+		transform:translate(-50%, -50%) scale(1);
+		opacity: 1;
+	}
 }
 table th, td{
 	border: 0;
