--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ hr {
   color: var(--color-text);
 }
 
-.Fullname, header img, .contact-wrapper, .languages-wrapper, .summary-wrapper, .skills-wrapper, .learning-wrapper, .education-wrapper {
+.Fullname, header img, .contact-wrapper, .languages-wrapper, .summary-wrapper, .skills-wrapper, .learning-wrapper, .education-wrapper, .project-wrapper {
   opacity: 0;
   animation: surfacing 1 forwards linear;
   animation-duration: 5s;
@@ -201,6 +201,10 @@ header img {
 
 .Fullname {
   animation-delay: 2s;
+}
+
+.project-wrapper {
+  animation-delay: 0.1s;
 }
 
 .education-wrapper {
